--- a/CoreAutomationFramework/CoreAutomationFramework/CoreAutomationFramework.csproj
+++ b/CoreAutomationFramework/CoreAutomationFramework/CoreAutomationFramework.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="GeoTimeZone" Version="4.1.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+        <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
         <PackageReference Include="NUnit" Version="3.13.1" />
         <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
         <PackageReference Include="coverlet.collector" Version="3.0.2" />
@@ -41,6 +42,9 @@
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <None Update="TestData\ReplaceLatitudeDirectory.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
